Add maximize button

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,6 +11,7 @@
   <div class="title-bar">
     <div class="title-bar drag-region"></div>
     <div id="close-button" class="title-bar button close"></div>
+    <div id="maximize-button" class="title-bar button maximize"></div>
     <div id="window-title" class="title-bar window-title"></div>
   </div>
   <div class="contents">
