--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -9,12 +9,12 @@
 
 <body>
   <div class="title-bar">
-    <div class="title-bar drag-region"></div>
+    <div class="drag-region"></div>
     <div id="close-button" class="title-bar button close"></div>
     <div id="maximize-button" class="title-bar button maximize"></div>
     <div id="restore-button" class="title-bar button restore"></div>
     <div id="minimize-button" class="title-bar button minimize"></div>
-    <div id="window-title" class="title-bar window-title"></div>
+    <div id="window-title" class="window-title"></div>
   </div>
   <div class="contents">
     <div>Hello World!</div>
