Change window title color when blur

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -14,7 +14,7 @@
     <div id="maximize-button" class="title-bar button maximize"></div>
     <div id="restore-button" class="title-bar button restore"></div>
     <div id="minimize-button" class="title-bar button minimize"></div>
-    <div id="window-title" class="window-title"></div>
+    <div id="window-title"></div>
   </div>
   <div class="contents">
     <div>Hello World!</div>
