--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,10 +10,9 @@
 <body>
   <div class="title-bar">
     <div class="drag-region"></div>
-    <div id="close-button" class="title-bar button close"></div>
-    <div id="maximize-button" class="title-bar button maximize"></div>
-    <div id="restore-button" class="title-bar button restore"></div>
-    <div id="minimize-button" class="title-bar button minimize"></div>
+    <div id="close-button"></div>
+    <div id="maximize-restore-button"></div>
+    <div id="minimize-button"></div>
     <div id="window-title"></div>
   </div>
   <div class="contents">
