--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <!-- https://electronjs.org/docs/tutorial/security#csp-meta-tag -->
-  <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-</head>
-
-<body>
-  <div class="title-bar">
-    <div class="drag-region"></div>
-    <div id="close-button"></div>
-    <div id="maximize-restore-button"></div>
-    <div id="minimize-button"></div>
-    <div id="window-title"></div>
-  </div>
-  <div class="contents">
-    <div>Hello World!</div>
-  </div>
-</body>
-
+  <body>
+    <div class="title-bar">
+      <div class="drag-region"></div>
+      <div id="close-button"></div>
+      <div id="maximize-restore-button"></div>
+      <div id="minimize-button"></div>
+      <div id="window-title"></div>
+    </div>
+    <div class="contents">
+      <div>Hello World!</div>
+    </div>
+  </body>
 </html>
